--- a/src/eegenie.yml
+++ b/src/eegenie.yml
@@ -9,10 +9,12 @@ eegenie:
   kover:   0.5
   hzmin:   0
   hzmax:  30
-  delta: [0.5,  4.0]
-  theta: [4.5,  7.5]
+  delta: [0.5, 5.0]
+  theta: [6.0, 9.5]
   alpha: [8.0, 15.0]
+  sigma: [10.5, 15.0] 
   beta: [15.5, 30.0]
-  sigma: [8.0, 16]
+  gamma: [30.0, 60.0]
+  all: [0.0,60.0]
   wtype: hann
   minpad: 1
